--- a/AppLogic/AppLogicText.zh-CN.resx
+++ b/AppLogic/AppLogicText.zh-CN.resx
@@ -197,6 +197,10 @@
     <value>修改{0}</value>
     <comment>from GoogleTranslator2</comment>
   </data>
+  <data name="ColumnEditorOperationCaption" xml:space="preserve">
+    <value>手术</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
   <data name="CommandBlockedDeleteAutoSelectView" xml:space="preserve">
     <value>我使用此视图知道如何在必要时自动从项目列表中进行选择。</value>
     <comment>from GoogleTranslator2</comment>
@@ -721,6 +725,14 @@
     <value>查看编辑器</value>
     <comment>from GoogleTranslator2</comment>
   </data>
+  <data name="StopwatchOptionsDisplayOperationCaption" xml:space="preserve">
+    <value>显示操作</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
+  <data name="StopwatchOptionsDurationOperationCaption" xml:space="preserve">
+    <value>持续时间操作</value>
+    <comment>from GoogleTranslator</comment>
+  </data>
   <data name="TraitTypeNameAssignment" xml:space="preserve">
     <value>任务</value>
     <comment>from GoogleTranslator2</comment>
@@ -808,5 +820,9 @@
   <data name="ViewEditorErrorOwnerNull" xml:space="preserve">
     <value>所有者找不到</value>
     <comment>from GoogleTranslator2</comment>
+  </data>
+  <data name="ViewEditorFilterOperation" xml:space="preserve">
+    <value>过滤操作</value>
+    <comment>from GoogleTranslator</comment>
   </data>
 </root>
